add first and last name to user route in server
