# server/routes/validation.js
@@ -58,6 +58,8 @@ const validatePostResource = [
     }]
 
 const validateSignUpUser = [
+    check('first_name').not().isEmpty().isLength({max: 100}),
+    check('last_name').not().isEmpty().isLength({max: 100}),
     check('password').not().isEmpty().isLength({min: 6, max: 100}),
     check('email').not().isEmpty().isEmail().isLength({max: 100}),
     (req, res, next) => {
